--- a/src/app/catmenu/catmenu.component.html
+++ b/src/app/catmenu/catmenu.component.html
@@ -1,20 +1,28 @@
 <div class="row">
-    <div class="column">
-<nav class="navigation">
-    <ul class="mainmenu">
-      <li><a [routerLink]="">Breeds</a>
-        <ul class="submenu">
+  <div class="column">
+    <nav class="navigation">
+      <ul class="mainmenu">
+        <li><a [routerLink]="">Breeds</a>
+          <ul class="submenu">
             <div *ngFor="let item of catBreeds">
-                <li><a [routerLink]="" (click)="selectBreed(item)">{{item.name}}</a></li>
+              <li><a [routerLink]="" (click)="selectBreed(item)">{{item.name}}</a></li>
             </div>
-          
-        </ul>
-      </li>      
-    </ul>
-  </nav>
-</div>
-<div class="column">
-  <div *ngIf="selectedBreed[0]">
-    {{selectedBreed[0].name}}
-</div>
-</div>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="column" align="left">
+    <div *ngIf="selectedBreed[0] && selectedCatBreedInfo[0]">
+      <img id="myimage" [src]='catimage' [width]=500 [height]='catimageheight' [alt]='catimageid' />
+      <h2>Description</h2><br>
+      <p>{{selectedCatBreedInfo[0].breeds[0].description}}</p><br>
+      <h2>Child Friendliness Score</h2><br>
+      {{selectedCatBreedInfo[0].breeds[0].child_friendly}}
+      <h2>Hospital URL</h2><br>
+      {{selectedCatBreedInfo[0].breeds[0].vcahospitals_url}}
+      <h2>Wikipedia Link</h2><br>
+      {{selectedCatBreedInfo[0].breeds[0].wikipedia_url}}
+      
+    </div>
+  </div>
