--- a/src/app/catmenu/catmenu.component.scss
+++ b/src/app/catmenu/catmenu.component.scss
@@ -62,11 +62,15 @@ html, body {
   max-height: 0;
   -webkit-transition: all 0.5s ease-out;
 }
-.column {
-    float: left;
-    width: 20%;
+
+  .row{
+    display: grid;
+    grid-template-columns: 18% 82%; /*columns widths*/
   }
-  
+  .columnTwo {
+    padding-left: 5px;
+    padding-right: 10px;
+  }
   /* Clear floats after the columns */
   .row:after {
     content: "";
